Replace new Integer/Long () call with Integer/Long.valueOf which allows caching