@@ -33,7 +33,7 @@ public class AccommodationPledgeTranslationBackingBeanImpl extends Accommodation
     private static final long serialVersionUID = 1L;
     
     /** The identifier for the Pledge Accommodation view */
-    public static final Long VIEW_ID = new Long(3);
+    public static final Long VIEW_ID = Long.valueOf(3);
     
     /** The mapping key for the page title as displayed in the browser tab */
     public static String ACCOMMODATIONPLEDGE_TITLE_MAPPING_KEY = "accommodationpledge.form.title";
