@@ -74,13 +74,13 @@ public class AddressHistory
      */
     public AddressHistory()
     {
-    	addressID = new Long(0);
+    	addressID = Long.valueOf(0);
     	addressOne = "";
 		addressTwo = "";
 		city = "";
 		stateProvinceRegion = "";
 		postCode = "";
-		country = new Long("0");
+		country = Long.valueOf("0");
 		
     }
     
