@@ -31,7 +31,7 @@ public class AddressTranslationBackingBeanImpl extends AddressImpl implements Ad
     private static final long serialVersionUID = 1L;
     
     /** The identifier for the Address view */
-    public static final Long VIEW_ID = new Long(1);
+    public static final Long VIEW_ID = Long.valueOf(1);
     
     /** The mapping key for the page title as displayed in the browser tab */
     public static String ADDRESS_TITLE_MAPPING_KEY = "address.form.title";
