@@ -33,7 +33,7 @@ public class GoodsPledgeTranslationBackingBeanImpl extends GoodsPledgeImpl imple
     private static final long serialVersionUID = 1L;
     
     /** The identifier for the Goods Pledge view */
-    public static final Long VIEW_ID = new Long(5);
+    public static final Long VIEW_ID = Long.valueOf(5);
     
     /** The mapping key for the page title as displayed in the browser tab */
     public static String GOODSPLEDGE_TITLE_MAPPING_KEY = "goodspledge.form.title";
