@@ -246,7 +246,7 @@ public class MessageResourceBoImpl implements MessageResourceBo
     public Long createAndStoreMessageResource(MessageResource messageResource, Long userID)
         throws MessageResourceSaveException
     {
-    	Long returnValue = new Long(0);
+    	Long returnValue = Long.valueOf(0);
         
 		try
 		{
@@ -339,7 +339,7 @@ public class MessageResourceBoImpl implements MessageResourceBo
     public Long createAndStoreMessageResourceFilter(MessageResourceFilter messageResourceFilter,  Long userId)
         throws MessageResourceSaveException
     {
-    	Long returnValue = new Long(0);
+    	Long returnValue = Long.valueOf(0);
         
 		try
 		{
@@ -373,7 +373,7 @@ public class MessageResourceBoImpl implements MessageResourceBo
     public Long updateMessageResourceFilter(MessageResourceFilter messageResourceFilter, Long userId)
         throws MessageResourceLoadException, MessageResourceSaveException, AuthorisationException, InvalidUserIDException
     {
-    	Long returnValue = new Long(0);
+    	Long returnValue = Long.valueOf(0);
     	
         //if (Authorisation.isAuthorisedUpdate("MessageResource", userId, MESSAGERESOURCEID) == false)
         //{
