@@ -339,7 +339,7 @@ public class ReferenceCategoryServiceImpl implements ReferenceCategoryService
     public Long createAndStoreReferenceCategoryFilter(ReferenceCategoryFilter referenceCategoryFilter, Long userId)
         throws ReferenceCategorySaveException
     {
-    	Long returnValue = new Long(0);
+    	Long returnValue = Long.valueOf(0);
         
 
 		try
@@ -374,7 +374,7 @@ public class ReferenceCategoryServiceImpl implements ReferenceCategoryService
     public Long updateReferenceCategoryFilter(ReferenceCategoryFilter referenceCategoryFilter, Long userId)
         throws ReferenceCategoryLoadException, ReferenceCategorySaveException, AuthorisationException, InvalidUserIDException
     {
-    	Long returnValue = new Long(0);
+    	Long returnValue = Long.valueOf(0);
     	
         //if (Authorisation.isAuthorisedUpdate("ReferenceCategory", userId, REFERENCECATEGORYID) == false)
         //{
